// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getValuesForFields > should match snapshots 1`] = `
{
  "DatumNarodenia": "1985-03-15",
  "Email": "jana.novakova@email.com",
  "GinisID": "MAG123",
  "KontaktovanyEmailom": true,
  "MaximalnaVyskaNajomneho": 700,
  "PreferovanaLokalita": "ruzinov, noveMesto",
  "PreferovanaVelkost": "3izbovy",
  "TelefonneCislo": "+421901234567",
  "TrvalyPobytUlicaACislo": "Hlavná 123",
}
`;

exports[`getValuesForFields > should match snapshots 2`] = `
{
  "ByvanieVMestskomNajomnomByte": false,
  "ChronickeOchorenie": true,
  "DovodyPodaniaZiadosti": "Potrebujeme väčší byt pre našu rastúcu rodinu a lepšie podmienky pre dieťa so zdravotným postihnutím.",
  "GinisID": "MAG123",
  "KontaktovanyEmailom": true,
  "MaximalnaVyskaNajomneho": 700,
  "PreferovanaLokalita": "ruzinov, noveMesto",
  "PreferovanaVelkost": "3izbovy",
  "RizikoveFaktory": true,
  "Vek": "menejAko63",
  "ZiadatelBezbarierovyByt": false,
  "ZiadatelBytovaNudza": true,
  "ZiadatelDatumNarodenia": "1985-03-15",
  "ZiadatelDlzkaBytovejNudze": "menejAko1",
  "ZiadatelEmail": "jana.novakova@email.com",
  "ZiadatelExistujuceDiagnozy": "astma, chronickaParadentoza",
  "ZiadatelFunkcnaPorucha": false,
  "ZiadatelInePrijmyVyska": 150,
  "ZiadatelRodinnyStav": "rozvedeny",
  "ZiadatelRodnePriezvisko": "Kováčová",
  "ZiadatelSkutocnyPobytRovnakyAkoT": true,
  "ZiadatelStatnaPrislusnost": "slovenska",
  "ZiadatelTelefonneCislo": "+421901234567",
  "ZiadatelTrvalyPobytPobytMenejAko": true,
  "ZiadatelTrvalyPobytUlicaACislo": "Hlavná 123",
  "ZiadatelTrvalyPobytVlastnikNehnu": false,
  "ZiadatelTypSkutocnehoByvania": "institucionalnaStarostlivost",
  "ZiadatelVyzivneVyska": 200,
  "ZiadatelZamestnaniePrijem": 1200,
  "ZoznamRizikovychFaktorov": "opustenieUstavnejStarostlivosti, osamelyRodic",
}
`;

exports[`getValuesForFields > should match snapshots 3`] = `
{
  "ChronickeOchorenie": false,
  "GinisID": "MAG123",
  "SucasneByvaniaRovnakaSituacia": true,
  "VlastnikNehnutelnosti": false,
  "ZiadatelDatumNarodenia": "1982-07-22",
  "ZiadatelRodinnyStav": "slobodny",
  "ZiadatelRodnePriezvisko": "Horváth",
  "ZiadatelSamostatnaZarobkovaCinno": 300,
  "ZiadatelSkutocnyPobytUlica": "Nová 456",
  "ZiadatelStatnaPrislusnost": "slovenska",
  "ZiadatelZamestnaniePrijem": 1500,
}
`;

exports[`getValuesForFields > should match snapshots 4`] = `
{
  "ChronickeOchorenie": false,
  "GinisID": "MAG123",
  "MaPrijem": false,
  "Student": true,
  "SucasneByvanieRovnakeAkoVase": true,
  "VlastnikNehnutelnosti": false,
  "ZiadatelDatumNarodenia": "2010-11-30",
  "ZiadatelStatnaPrislusnost": "slovenska",
}
`;

exports[`getValuesForFields > should match snapshots 5`] = `
{
  "ChronickeOchorenie": false,
  "GinisID": "MAG123",
  "MaPrijem": true,
  "Student": true,
  "SucasneByvanieRovnakeAkoVase": true,
  "VlastnikNehnutelnosti": false,
  "ZiadatelDatumNarodenia": "2005-04-18",
  "ZiadatelStatnaPrislusnost": "slovenska",
  "ZiadatelZamestnaniePrijem": 200,
}
`;

exports[`getValuesForFields > should match snapshots 6`] = `
{
  "ChronickeOchorenie": false,
  "DochodokVyska": 550,
  "GinisID": "MAG123",
  "SucasneByvanieRovnakeAkoVase": true,
  "VlastnikNehnutelnosti": false,
  "ZiadatelDatumNarodenia": "1960-09-05",
  "ZiadatelStatnaPrislusnost": "slovenska",
}
`;
